# NumbaIDA

./: .flake8  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: install_and_run.yml
NumbaIDA/: __init__.py  driver.py
examples/: herg_channel.py
numbaida/: __init__.py  driver.py
src/NumbaIDA/: IDAWrapper.cpp  IDAWrapper.hpp
tests/: test_herg_model.py
