[build-system]
requires = ["scikit-build", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numbaida"
version = "0.0.1"
description = "Python wrapper of IDA (solving DAEs) which can be used with Numba."
readme = "README.md"
authors = [
    { name = "Joseph Shuttleworth", email = "joseph.shuttleworth@nottingham.ac.uk" }
]
license = { text = "MIT" }
requires-python = ">3.6"
dependencies = [
    "numpy",
    "numba",
    "scikit-build"
]

[project.optional-dependencies]
test = [
    "pytest-cov>=2.10",
    "pytest>=4.6",
    "flake8>=3",
    "matplotlib",
    "isort",
    "mock>=3.0.5",
    "codecov>=2.1.3",
    "matplotlib>=3.5.1"
]

[tool.setuptools]
packages = ["numbaida"]

[tool.scikit-build]
make-args = ["-DSKBUILD=ON"]
